@@ -71,12 +71,13 @@ INCLUDES =				\
 	$(LIBRSVG_CFLAGS) 		\
 	$(GTK_CFLAGS)			\
 	-DG_LOG_DOMAIN=\"librsvg\" 	\
-	-DG_DISABLE_DEPRECATED 		\
-	-DPANGO_DISABLE_DEPRECATED 	\
-	-DGDK_DISABLE_DEPRECATED 	\
-	-DGDK_PIXBUF_DISABLE_DEPRECATED	\
-	-DGTK_DISABLE_DEPRECATED 	\
 	-DDATADIR="\"$(datadir)\""
+
+#	-DG_DISABLE_DEPRECATED 		\
+#	-DPANGO_DISABLE_DEPRECATED 	\
+#	-DGDK_DISABLE_DEPRECATED 	\
+#	-DGDK_PIXBUF_DISABLE_DEPRECATED	\
+#	-DGTK_DISABLE_DEPRECATED 	\
 
 DEPS = $(top_builddir)/librsvg-2.la
 LDADDS =				\
