@@ -20,7 +20,7 @@ dnl ===========================================================================
 
 LIBRSVG_MAJOR_VERSION=2
 LIBRSVG_MINOR_VERSION=5
-LIBRSVG_MICRO_VERSION=0
+LIBRSVG_MICRO_VERSION=1
 AC_SUBST(LIBRSVG_MAJOR_VERSION)
 AC_SUBST(LIBRSVG_MINOR_VERSION)
 AC_SUBST(LIBRSVG_MICRO_VERSION)
