@@ -1,3 +1,7 @@
+2004-01-06  Dom Lachowicz <cinamod@hotmail.com>
+
+	* Makefile.am: Fix bug #130687
+	
 2004-01-05  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-text.c:
